2010-09-16  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Bind [header-line double-mouse-1] to kill-this-buffer.

2010-09-14  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el ("emms-playlist-mode"): Use space to pause.

2010-09-08  Meteor Liu  <meteor1113@gmail.com>

	* init-site.el: Add ibus setting.
	(require): Add scim-bridge setting.

2010-09-05  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el (emms-dir-tree): Improve emms setting.

	* init-toolbar.el: Remove semantic-impl-toggle toolbar item.
	Setup emms toolbar item.

	* init-misc.el (emms): Set autoload for emms.

2010-08-26  Meteor Liu  <meteor1113@gmail.com>

	* .emacs: Update to support cedet-1.0

2010-08-23  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (format-region): Check whitespace-cleanup.

2010-08-21  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: In default, don't enable whitespace in sql-mode.

2010-08-19  Meteor Liu  <meteor1113@gmail.com>

	* snippets/text-mode/isot: Add.

2010-08-14  Meteor Liu  <meteor1113@gmail.com>

	* init-toolbar.el: Enable upcase-region and downcase-region only (region-active-p).

2010-08-07  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Disable linum-mode in default because slow.

	* init-misc.el: Add cn-weather.

2010-08-04  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el (org-mode-hook): Enable whitespace in org-mode.

2010-08-03  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Set auto-complete for clang.

2010-08-02  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el ("company"): Set autoload for company-mode.

2010-07-25  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Update auto-complete from 1.2 to 1.3

2010-07-22  Meteor Liu  <meteor1113@gmail.com>

	* init-misc.el: Disable highlight-symbol-mode in console.

2010-07-19  Meteor Liu  <meteor1113@gmail.com>

	* init-basic.el: Enable pc-selection-mode in emacs-21.

2010-07-14  Meteor Liu  <meteor1113@gmail.com>
